--- a/task03-one-piece-website/scss/_sipnosis.scss
+++ b/task03-one-piece-website/scss/_sipnosis.scss
@@ -4,14 +4,18 @@
 * Contact us at contact@akurey.com
 * @summary styles for the sipnosis of the task #3 of the web training, done by Esteban Mata
 */
+
 .sipnosis {
   .mobile__logo {
     display: none;
-    visibility: hidden;
+    &--expanded {
+      display: none;
+    }
   }
 
   &__image {
     position: relative;
+    z-index: -1;
     img {
       width: 100%;
     }
@@ -27,7 +31,52 @@
   }
 }
 
+.collapse__card {
+  border-radius: 6px;
+  background-color: white;
+  box-shadow: 0px 0px 8px #b8e1ff;
+  padding: 32px 16px;
+  h1 {
+    font-weight: 700;
+    font-size: 22px;
+  }
+  p {
+    font-weight: 400;
+    font-size: 16px;
+  }
+}
+
+#sipnosisButton {
+  display: none;
+
+  span {
+    color: $color-dark-01;
+    font-weight: 400;
+    font-size: 18px;
+  }
+}
+@include media-breakpoint-up(lg) {
+  #SipnosisText {
+    display: block;
+  }
+}
+
 @include media-breakpoint-down(lg) {
+  .collapse__card {
+    padding: 8px;
+    margin: 0px $padding-tablet !important;
+    margin-top: -59px !important;
+    z-index: 10;
+  }
+
+  #sipnosisButton {
+    display: block;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-top: 0.5px solid $color-dark-01;
+  }
   .sipnosis {
     width: inherit;
   }
@@ -36,8 +85,10 @@
 @include media-breakpoint-down(sm) {
   .sipnosis {
     .mobile__logo {
-      display: block;
-      visibility: visible;
+      &--expanded {
+        display: block;
+      }
+
       position: absolute;
       width: 163px;
       height: 58px;
@@ -64,5 +115,12 @@
   .collapse {
     margin: 0 $padding-mobile;
     min-height: 256px;
+
+    &__card {
+      &--expanded {
+        margin-top: 72px !important;
+      }
+      margin-top: 19px !important;
+    }
   }
 }
